namespace MartinFowler.Refactoring.Theatre.v7
{
    public enum PlayType
    {
        Tragedy, Comedy
    }
}